--- a/src/main/resources/templates/RegisterView.html
+++ b/src/main/resources/templates/RegisterView.html
@@ -6,7 +6,7 @@
     <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 <body class="register-view d-flex flex-column min-vh-100">
-<!--<header th:replace="~{fragments/navbar :: header(context='register')}"></header>-->
+<header th:replace="~{fragments/navbar :: header(context='register')}"></header>
 
 <main class="form-signin">
     <form th:replace="~{fragments/user-form :: user-form(context='create-user')}"></form>
