--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -72,3 +72,89 @@ body {
 .error-page a:hover {
     color: lightgray;
 }
+/*LOGIN / REGISTER / UPDATE PROFILE VIEW*/
+.login-view, .register-view, .user-update-view {
+    height: 100%;
+}
+
+.form-signin, .form-update {
+    width: 100%;
+    max-width: 330px;
+    padding: 10% 15px 15px;
+    margin: auto;
+}
+
+.form-signin .checkbox {
+    font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within,
+.form-update .form-floating:focus-within {
+    z-index: 2;
+}
+
+.form-signin div.form-floating:first-of-type > input,
+.form-update div.form-floating:first-of-type > input {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    margin-bottom: -1px;
+}
+
+.form-signin div.form-floating:last-of-type > input,
+.form-update div.form-floating:last-of-type > input {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    margin-bottom: 10px;
+}
+
+.form-signin div.form-floating:not(:first-of-type):not(:last-of-type) > input,
+.form-update div.form-floating:not(:first-of-type):not(:last-of-type) > input {
+    border-radius: 0;
+}
+
+.form-signin input[type="submit"],
+.form-update input[type="submit"] {
+    margin-top: 10px;
+}
+
+.form-update .list-group-checkable .list-group-item {
+    cursor: pointer;
+}
+
+.form-update .list-group-item-check {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+}
+
+.form-update .list-group-item-check:hover ~ .list-group-item {
+    background-color: var(--bs-light);
+}
+
+.form-update .list-group-item-check:checked ~ .list-group-item.admin-item {
+    color: #fff;
+    background-color: var(--bs-success);
+}
+
+.form-update .list-group-item-check:checked ~ .list-group-item.blocked-item {
+    color: #fff;
+    background-color: var(--bs-danger);
+}
+
+#validationTags {
+    width: 100%;
+    margin-top: .25rem;
+    font-size: .800em;
+    color: #dc3545;
+}
+
+#editor, .ql-toolbar {
+    background-color: white;
+}
+
+#editor {
+    border-bottom-left-radius: .375rem;
+}
+
+.ql-toolbar {
+    border-top-left-radius: .375rem;
+}
