--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -27,6 +27,43 @@ body {
     background-color: #ffc107;
 }
 
+/*CONTESTS CARDS*/
+.neon-text {
+    color: #fff;
+    text-shadow:
+            0 0 7px #ffc107,
+            0 0 10px #ffc107,
+            0 0 21px #ffc107,
+            0 0 42px #212529,
+            0 0 82px #212529,
+            0 0 92px #212529,
+            0 0 102px #212529;
+}
+
+.card:hover .overlay {
+    opacity: 1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: opacity 0.5s ease-in-out;
+}
+
+.overlay a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    cursor: pointer;
+}
+
 /*ERROR PAGE*/
 .error-page {
     background-color: rgb(51, 51, 51);
@@ -72,6 +109,7 @@ body {
 .error-page a:hover {
     color: lightgray;
 }
+
 /*LOGIN / REGISTER / UPDATE PROFILE VIEW*/
 .login-view, .register-view, .user-update-view {
     height: 100%;
