add UserUpdateView.html add new methods in AuthenticationHelper add update and delete method in UserMvcController

--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title th:text="#{page.title.user-profile}">Forum Management System</title>
+  <title th:text="#{page.title.user-profile}">Photo Contest</title>
   <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 
