small changes to showLoginPage, showRegisterPage, add change permissions functionality.

--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -7,7 +7,7 @@
 </head>
 
 <body class="user-view d-flex flex-column min-vh-100"
-      th:with="permissionPath=${requestURI + '/update/permissions'},
+      th:with="permissionPath=${requestURI + '/permissions'},
                updatePath=${requestURI + '/update'},
                deletePath=${requestURI + '/delete'}">
 
