--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,10 @@
-<div th:fragment="footer" class="container mt-auto">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-3 border-top">
+<div th:fragment="footer" class="container mt-auto bg-dark text-warning rounded-top">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-3">
     <div class="d-flex align-items-center">
       <span class="mb-3 ms-3 mb-md-0 text-muted">&copy; 2023 Team 12, Inc</span>
     </div>
     <div class="d-flex align-items-center">
-      <span class="mb-3 ms-3 mb-md-0 text-muted">Supported by <a href="https://www.telerikacademy.com/" target="_blank">Telerik Academy</a></span>
+      <span class="mb-3 ms-3 mb-md-0 text-muted">Supported by <a class="link-warning" href="https://www.telerikacademy.com/" target="_blank">Telerik Academy</a></span>
     </div>
   </footer>
 </div>
