--- a/src/main/resources/templates/ContestsView.html
+++ b/src/main/resources/templates/ContestsView.html
@@ -6,7 +6,7 @@
     <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
 
-<body class="contests-view d-flex flex-column min-vh-100">
+<body class="contest-view d-flex flex-column min-vh-100">
 <header th:replace="~{fragments/navbar :: header(context='contests')}"></header>
 <main>
 
@@ -14,13 +14,13 @@
         <h2 class="pb-2 text-center display-2" th:text="${!contests.isEmpty() ? 'Contests' : 'No Contests'}">Contests (design)</h2>
         <form th:replace="~{fragments/contest-form :: contest-form-sort}"></form>
 
-        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 align-items-stretch g-4 py-5">
             <th:block th:each="contest : ${contests}">
                 <div class="col">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg contest-cards"
                          th:style="${contest.coverPhoto != null ? 'background-image: url(' + contest.coverPhoto + ')' : ''}">
                         <div class="overlay">
-                            <a href="#" class="btn btn-lg btn-warning btn-overlay rounded-4" th:href="@{/contest/{id}(id=${contest.id})}">View</a>
+                            <a href="#" class="btn btn-lg btn-warning btn-overlay rounded-4" th:href="@{/contests/{id}(id=${contest.id})}">View</a>
                         </div>
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                             <h3 class="pt-4 mt-4 mb-4 display-5 lh-1 neon-text"
@@ -28,7 +28,7 @@
                                 Title (design)</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
-                                    <span class="badge d-flex align-items-center p-1 pe-2 text-dark bg-warning border border-warning rounded-pill">
+                                    <span class="badge me-1 d-flex align-items-center p-1 pe-2 text-dark bg-warning border border-warning rounded-pill">
                                       <i class="bi" th:classappend="${contest.invitational ? 'bi-lock-fill' : 'bi-unlock-fill'}"></i>
                                       <span class="vr mx-1"></span>
                                       <small th:text="${contest.invitational ? 'Invitational' : 'Open'}">Open (design)</small>
