--- a/src/main/resources/templates/fragments/photo-form-new.html
+++ b/src/main/resources/templates/fragments/photo-form-new.html
@@ -3,14 +3,17 @@
   <div>
     <label for="title">Title:</label>
     <input type="text" id="title" name="title" th:field="*{title}">
+    <label  th:errors="*{title}">Name error placeholder</label>
   </div>
   <div>
     <label for="story">Story:</label>
     <textarea id="story" name="story" rows="10" th:field="*{story}"></textarea>
+    <label th:errors="*{story}">Name error placeholder</label>
   </div>
   <div>
     <label for="file">File:</label>
     <input type="file" id="file" name="file" th:field="*{file}">
+    <label th:errors="*{file}">Name error placeholder</label>
   </div>
   <button type="submit">Submit</button>
 </form>
